--- a/vaggosstamko/3d/index.html
+++ b/vaggosstamko/3d/index.html
@@ -8,7 +8,7 @@
 <body>
   <canvas id="c" tabindex="0"></canvas>
   <div id="debug"><pre></pre></div>
-  <script src="/vaggosstamko/3d/node_modules/cannon/build/cannon.min.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
   <script type="module" src="main.js"></script>
 </body>
 </html>
