Mobile controls implemented
v1.0

--- a/vaggosstamko/3d/index.html
+++ b/vaggosstamko/3d/index.html
@@ -9,6 +9,7 @@
   <canvas id="c" tabindex="0"></canvas>
   <div id="debug"><pre></pre></div>
   <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script type="module" src="swiped-events.js"></script>
   <script type="module" src="main.js"></script>
 </body>
 </html>
