--- a/vaggosstamko/3d/index.html
+++ b/vaggosstamko/3d/index.html
@@ -6,8 +6,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="loader">
+    <span id="start">START</span>
+    <svg id="loading-svg" width="200" height="200" viewBox="0 0 100 100">
+      <polyline class="line-cornered stroke-still" points="0,0 100,0 100,100" stroke-width="10" fill="none"></polyline>
+      <polyline class="line-cornered stroke-still" points="0,0 0,100 100,100" stroke-width="10" fill="none"></polyline>
+      <polyline class="line-cornered stroke-animation" points="0,0 100,0 100,100" stroke-width="10" fill="none"></polyline>
+      <polyline class="line-cornered stroke-animation" points="0,0 0,100 100,100" stroke-width="10" fill="none"></polyline>
+    </svg>
+  </div>
   <canvas id="c" tabindex="0"></canvas>
-  <div id="debug"><pre></pre></div>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script type="module" src="swiped-events.js"></script>
   <script type="module" src="main.js"></script>
