--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>The 3D Portfolio Game</title>
   <link rel="shortcut icon" type="image/jpg" href="../favicon.ico"/>
+  <link rel="stylesheet" id="olympus-google-fonts-css" href="https://fonts.googleapis.com/css?family=Montserrat%3A100%2C200%2C300%2C400%2C500%2C600%2C700%2C800%2C900%2C100i%2C200i%2C300i%2C400i%2C500i%2C600i%2C700i%2C800i%2C900i&amp;display=swap&amp;subset=all&amp;ver=3.0.16" type="text/css" media="all">
   <meta property="og:image" content="../assets/featured.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1024">
@@ -10,19 +11,12 @@
 </head>
 <body>
   <div id="loader">
-    <div class="load-message">
-      <span>Loaded:</span>
-      <span id="progress">0</span>
-      <span id="percentage">%</span>
+    <div class="load-message-div">
+      <span class="load-message">Connecting...</span>
     </div>
-    <span id="start">START</span>
-    <svg id="loading-svg" width="200" height="200" viewBox="0 0 100 100">
-      <polyline class="line-cornered stroke-still" points="0,0 100,0 100,100" stroke-width="10" fill="none"></polyline>
-      <polyline class="line-cornered stroke-still" points="0,0 0,100 100,100" stroke-width="10" fill="none"></polyline>
-      <polyline class="line-cornered stroke-animation" points="0,0 100,0 100,100" stroke-width="10" fill="none"></polyline>
-      <polyline class="line-cornered stroke-animation" points="0,0 0,100 100,100" stroke-width="10" fill="none"></polyline>
-    </svg>
-    <span id="load-message-2">For an optimal experience use a desktop.</span>
+    <button class="start">START</button>
+    
+    <span class="load-message-2">SEASON 2: Now with new graphics and features!</span>
   </div>
   <canvas id="c" tabindex="0"></canvas>
 </body>
