--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <title>The 3D Portfolio Game</title>
   <link rel="shortcut icon" type="image/jpg" href="../favicon.ico"/>
   <link rel="stylesheet" id="olympus-google-fonts-css" href="https://fonts.googleapis.com/css?family=Montserrat%3A100%2C200%2C300%2C400%2C500%2C600%2C700%2C800%2C900%2C100i%2C200i%2C300i%2C400i%2C500i%2C600i%2C700i%2C800i%2C900i&amp;display=swap&amp;subset=all&amp;ver=3.0.16" type="text/css" media="all">
+  <link href="http://fonts.cdnfonts.com/css/arcade-classic" rel="stylesheet">
   <meta property="og:image" content="../assets/featured.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1024">
@@ -18,6 +19,7 @@
     
     <span class="load-message-2">SEASON 2: Now with new graphics and features!</span>
   </div>
+  <div class="score score-animation">0</div>
   <canvas id="c" tabindex="0"></canvas>
 </body>
 </html>
